--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to My Personal Website!
-description: Here's where I show off several projects and cool things I made in my spare time
+description: Here's where I show off projects and other cool things I make in my spare time
